# Python

FastAPI/Fast/: .gitignore  main.py  (+3 more)
FastAPI/coursera-rest-api/: .gitignore  pyproject.toml
FastAPI/coursera-rest-api/source/: config.py  database.py  logging_conf.py  main.py
FastAPI/coursera-rest-api/source/models/: post.py
FastAPI/coursera-rest-api/source/routers/: post.py
FastAPI/coursera-rest-api/source/tests/: conftest.py
Jupyter_Notebooks/: 01_string_input_print.ipynb  firstjyptr.ipynb
Leetcode/: 69.py  sketch.py  totalmoney.py
ML/: README.md  pyproject.toml
Medium/Learning/: EDA.ipynb  dash_.py  estate.ipynb  pyproject.toml  regexp.py
Medium/Learning/.ipynb_checkpoints/: estate-checkpoint.ipynb
Medium/Learning/Codecademy_NBA_Trends_Project/: script.ipynb
Medium/Learning/builtins/: string.py
Medium/Learning/numpy_/: basics.py  bitckaggle.py  momentum.py  vectorizaiton.py
Medium/Learning/pyautogui_/: youtube.py
async/: README.md  countasync.py  pyproject.toml
data_analysis/: .gitignore  README.md  kaggle.py  pyproject.toml
data_analysis/Projects/New York real estate/: analysis.ipynb
data_analysis/Projects/Roller Coaster/: EDA.ipynb  README.md
data_analysis/Projects/Ultramarathons/: EDA.ipynb  README.md  country_codes.csv
data_analysis/Projects/Waiter Tips/: README.md  analysis.ipynb
data_analysis/Projects/Wordle/: README.md  analysis.ipynb
django/: db.sqlite3
playwright/: first.py  plyrt.py  pyproject.toml
postgres_conn/: .env.example  main.py  pyproject.toml
sqlmodel-docs/: README.md  database.sqbpro  pyproject.toml
(+148 files in other folders)
