[project]
name = "dataanalystportfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "kagglehub>=0.3.12",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pycountry>=24.6.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "selenium>=4.31.0",
    "statsmodels>=0.14.4",
]
