[project]
name = "learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash-mantine-components>=2.1.0",
    "dash>=3.2.0",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "matplotlib>=3.10.5",
    "pyautogui>=0.9.54",
    "pymsgbox>=2.0.1",
]
